After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730951 - Preferences dialog is broken
Preferences dialog is broken
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-29 18:30 UTC by Garrett Regier
Modified: 2014-05-29 23:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix preferences dialog (1.23 KB, patch)
2014-05-29 18:51 UTC, Garrett Regier
committed Details | Review

Description Garrett Regier 2014-05-29 18:30:26 UTC
The dialog is never shown and spews warnings and criticals like crazy. This is due to libpeas-gtk not being linked to gedit as a symbol is no longer used. Probably the best way to fix this is to add a g_type_ensure() somewhere.
Comment 1 Garrett Regier 2014-05-29 18:51:06 UTC
Created attachment 277480 [details] [review]
Fix preferences dialog
Comment 2 Paolo Borelli 2014-05-29 19:52:36 UTC
Review of attachment 277480 [details] [review]:

looks good
Comment 3 Garrett Regier 2014-05-29 23:01:43 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.