Fix preferences dialog

The linker didn't link libpeas-gtk because it wasn't being used.

https://bugzilla.gnome.org/show_bug.cgi?id=730951
Signed-off-by: Garrett Regier <garrettregier@gmail.com>